force-app/main/default/objects/Contact/fields/First_Purchase__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase__c</fullName>
    <label>First Purchase</label>
    <type>Date</type>
</CustomField>