force-app/main/default/objects/Contact/fields/Last_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase__c</fullName>
    <label>Last Purchase</label>
    <type>Date</type>
</CustomField>