force-app/main/default/objects/Contact/fields/Personal_Discount__c.field-meta.xml
<CustomField>
    <fullName>Personal_Discount__c</fullName>
    <label>Personal Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>